--- a/books/Base.lproj/SearchByText.storyboard
+++ b/books/Base.lproj/SearchByText.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="o9x-cb-ys2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Nav With Read State-->
@@ -13,7 +14,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="ZbB-Cm-3dh" kind="relationship" relationship="rootViewController" id="eAm-p4-Kt7"/>
+                        <segue destination="coT-wT-mpQ" kind="relationship" relationship="rootViewController" id="Xlt-rc-n8l"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qkf-nI-8ex" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -21,82 +22,118 @@
             <point key="canvasLocation" x="-2363" y="-83"/>
         </scene>
         <!--Search Online-->
-        <scene sceneID="wgV-Pb-dES">
+        <scene sceneID="X5e-4E-ore">
             <objects>
-                <viewController id="ZbB-Cm-3dh" customClass="SearchByText" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="coT-wT-mpQ" customClass="SearchByText" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="0FF-eY-Cjj"/>
-                        <viewControllerLayoutGuide type="bottom" id="7bq-lY-WtQ"/>
+                        <viewControllerLayoutGuide type="top" id="4rw-Hs-CL9"/>
+                        <viewControllerLayoutGuide type="bottom" id="n0B-zH-dnZ"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="l3s-Y7-G59">
+                    <view key="view" contentMode="scaleToFill" id="Mt5-Jg-rxH">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="2d0-S9-uxJ">
+                            <searchBar contentMode="redraw" placeholder="Search by Title or Author" translatesAutoresizingMaskIntoConstraints="NO" id="Vde-59-8Z3">
                                 <rect key="frame" x="0.0" y="64" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
-                                <scopeButtonTitles>
-                                    <string>Title</string>
-                                    <string>Title</string>
-                                </scopeButtonTitles>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             </searchBar>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="uJa-ST-YFK">
-                                <rect key="frame" x="290" y="290" width="20" height="20"/>
-                            </activityIndicatorView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="92" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="1nj-su-2IL">
+                                <rect key="frame" x="0.0" y="108" width="600" height="492"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="BookTableViewCell" rowHeight="92" id="cbl-0B-qL9" customClass="BookTableViewCell" customModule="Reading_List" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="18" width="600" height="92"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cbl-0B-qL9" id="soP-MF-hPS">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="91.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9zc-xW-GG6">
+                                                    <rect key="frame" x="72" y="8" width="520" height="19.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OSF-rz-cGC">
+                                                    <rect key="frame" x="4" y="4" width="60" height="83.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="60" id="MhW-5N-VfI"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="9zc-xW-GG6" firstAttribute="trailing" secondItem="soP-MF-hPS" secondAttribute="trailingMargin" id="UMU-f5-Gpb"/>
+                                                <constraint firstItem="9zc-xW-GG6" firstAttribute="top" secondItem="soP-MF-hPS" secondAttribute="topMargin" id="eMO-rg-8NV"/>
+                                                <constraint firstItem="OSF-rz-cGC" firstAttribute="leading" secondItem="soP-MF-hPS" secondAttribute="leading" constant="4" id="hoY-dw-vvb"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="OSF-rz-cGC" secondAttribute="bottomMargin" constant="4" id="lu9-Hc-v8b"/>
+                                                <constraint firstItem="9zc-xW-GG6" firstAttribute="leading" secondItem="OSF-rz-cGC" secondAttribute="trailing" constant="8" id="qiU-Ug-bNb"/>
+                                                <constraint firstItem="OSF-rz-cGC" firstAttribute="top" secondItem="soP-MF-hPS" secondAttribute="top" constant="4" id="sgh-g1-mgQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="bookCover" destination="OSF-rz-cGC" id="Gcp-XA-o0G"/>
+                                            <outlet property="titleLabel" destination="9zc-xW-GG6" id="GLe-qC-Md9"/>
+                                            <segue destination="7vF-2L-Pie" kind="show" identifier="createReadStateSegue" id="xME-hs-aON"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="2d0-S9-uxJ" firstAttribute="top" secondItem="0FF-eY-Cjj" secondAttribute="bottom" id="Y2O-4a-AyR"/>
-                            <constraint firstAttribute="trailing" secondItem="2d0-S9-uxJ" secondAttribute="trailing" id="eqw-cw-0S2"/>
-                            <constraint firstItem="uJa-ST-YFK" firstAttribute="centerY" secondItem="l3s-Y7-G59" secondAttribute="centerY" id="krs-Go-RPx"/>
-                            <constraint firstItem="uJa-ST-YFK" firstAttribute="centerX" secondItem="l3s-Y7-G59" secondAttribute="centerX" id="pDO-Dg-0Rp"/>
-                            <constraint firstItem="2d0-S9-uxJ" firstAttribute="leading" secondItem="l3s-Y7-G59" secondAttribute="leading" id="poE-vL-njP"/>
+                            <constraint firstItem="1nj-su-2IL" firstAttribute="leading" secondItem="Mt5-Jg-rxH" secondAttribute="leading" id="OH0-wr-DNv"/>
+                            <constraint firstAttribute="trailing" secondItem="1nj-su-2IL" secondAttribute="trailing" id="QbK-d5-1Zq"/>
+                            <constraint firstItem="1nj-su-2IL" firstAttribute="top" secondItem="Vde-59-8Z3" secondAttribute="bottom" id="Tx7-wP-nRv"/>
+                            <constraint firstItem="n0B-zH-dnZ" firstAttribute="top" secondItem="1nj-su-2IL" secondAttribute="bottom" id="Ux0-hq-khg"/>
+                            <constraint firstItem="Vde-59-8Z3" firstAttribute="top" secondItem="4rw-Hs-CL9" secondAttribute="bottom" id="YG1-Fi-zbz"/>
+                            <constraint firstAttribute="trailing" secondItem="Vde-59-8Z3" secondAttribute="trailing" id="fsF-jx-2ns"/>
+                            <constraint firstItem="1nj-su-2IL" firstAttribute="top" secondItem="Vde-59-8Z3" secondAttribute="bottom" id="s0V-uR-Fep"/>
+                            <constraint firstItem="Vde-59-8Z3" firstAttribute="leading" secondItem="Mt5-Jg-rxH" secondAttribute="leading" id="uBF-xd-dQa"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Search Online" id="c3n-Lz-svx">
-                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="6cw-PR-9u0">
+                    <navigationItem key="navigationItem" title="Search Online" id="bXy-YI-GNG">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="miL-NO-6pf">
                             <connections>
-                                <action selector="cancelWasPressed:" destination="ZbB-Cm-3dh" id="QHK-mQ-Pdw"/>
+                                <action selector="cancelWasPressed:" destination="coT-wT-mpQ" id="yrd-NM-NgS"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="searchBar" destination="2d0-S9-uxJ" id="CFO-hX-wEH"/>
-                        <outlet property="spinner" destination="uJa-ST-YFK" id="Fht-ej-ER1"/>
-                        <segue destination="qpw-8b-qzr" kind="show" identifier="showTextSearchResultsSegue" id="HLV-Na-6qg"/>
+                        <outlet property="mainTableView" destination="1nj-su-2IL" id="HlX-Ol-1Qp"/>
+                        <outlet property="searchBar" destination="Vde-59-8Z3" id="f8O-QL-6gH"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2FV-jP-g4Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lTx-wk-0NZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1619" y="-83"/>
+            <point key="canvasLocation" x="-1480" y="-83"/>
         </scene>
-        <!--Search Results-->
-        <scene sceneID="S6X-y4-YFT">
+        <!--Create Read State-->
+        <scene sceneID="54O-N4-cSB">
             <objects>
-                <tableViewController id="qpw-8b-qzr" customClass="SearchResults" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="QyB-9y-boJ">
+                <viewController id="7vF-2L-Pie" customClass="CreateReadState" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AkI-4j-qch"/>
+                        <viewControllerLayoutGuide type="bottom" id="Qvg-SH-Wya"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uNI-Dk-vwH">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="23s-np-NwJ">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="23s-np-NwJ" id="S8C-Zp-pbd">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="qpw-8b-qzr" id="dl3-00-DIQ"/>
-                            <outlet property="delegate" destination="qpw-8b-qzr" id="kla-mW-vfw"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9WI-kj-gJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="rf4-kT-NHt">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Z0U-W0-Vs9">
+                            <connections>
+                                <action selector="doneWasPressed:" destination="7vF-2L-Pie" id="xVe-F4-yJC"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="doneButton" destination="Z0U-W0-Vs9" id="faB-rX-LwL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W7s-u5-f7w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-884" y="-83"/>
+            <point key="canvasLocation" x="-757" y="-83"/>
         </scene>
     </scenes>
 </document>
